--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@ working on.
   <!-- Getting Fonts from Google Fonts API -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 
   <!-- ===============================CSS========================== -->
   <style>
@@ -115,7 +116,7 @@ working on.
       <h2 style="margin-right: 200px;">Lane & Vehicle Detection</h2>
       </center>
       <img src="Photos/ld_vd_1.gif" style="width:400px;height:250px; float: right; margin-left:50px; margin-right:100px; margin-bottom:50px;">
-      <p style="font-family: 'consolas'; font-size:20px; margin-right : 300px;">
+      <p id="proj2" style="font-family: 'consolas'; font-size:20px; margin-right : 300px;">
         Object detection is a common application within the field of computer vision and there are many ways of implementing
         it. For this project, a support vector machine was trained on thousands of HOG representations of various vehicles and
         and a sliding window approach for the bounding box detections. 
@@ -133,7 +134,7 @@ working on.
       <h2 style="margin-right: 240px;">Financial Market Prediction</h2>
       </center>
       <img src="Photos/BTC_inference.png" style="width:500px;height:450; float: left; margin-right:50px;">
-      <p style="font-family: 'consolas'; font-size:20px; margin-right : 150px;">
+      <p id="proj3" style="font-family: 'consolas'; font-size:20px; margin-right : 150px;">
         Machine learning is increasingly becoming popular within the financial trading markets. We tackled a novel approach
         using historical BitCoin data to predict prices and inference price by day. We utilized various financial market indicators
         to help with the feature engineering. We built multiple deep learning models such a 1 dimensional convolutional neural network (CNN)
@@ -157,12 +158,14 @@ working on.
   </center>
 
   <script>
-    function myFunction() {
-        document.getElementById("proj1").style.font = "italic bold 20px arial,serif";
+    function change_font_mobile() {
+        document.getElementById("proj1").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj2").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj3").style.font = "Source Code Pro,monospace";
     }
     
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-      myFunction();
+      change_font_mobile();
     }
   </script>
 </html>
