--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <!-- Getting Fonts from Google Fonts API -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 
     <!-- ===============================CSS========================== -->
     <style>
@@ -108,4 +109,15 @@
       </center>
     
   </body>
+  <script>
+    function change_font_mobile() {
+        document.getElementById("proj1").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj2").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj3").style.font = "Source Code Pro,monospace";
+    }
+    
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+      change_font_mobile();
+    }
+  </script>
 </html>
