--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@ index.html is the main homepage of the website
 
     </body>
   </div>
-  
   </div>
+  <script>
+    function change_font_mobile() {
+        document.getElementById("proj1").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj2").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj3").style.font = "Source Code Pro,monospace";
+    }
+    
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+      change_font_mobile();
+    }
+  </script>
 </html>
