--- a/about.html
+++ b/about.html
@@ -111,9 +111,9 @@
   </body>
   <script>
     function change_font_mobile() {
-        document.getElementById("proj1").style.font = "Source Code Pro,monospace";
-        document.getElementById("proj2").style.font = "Source Code Pro,monospace";
-        document.getElementById("proj3").style.font = "Source Code Pro,monospace";
+        document.getElementById("proj1").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("proj2").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("proj3").style.font = "20px 'Source Code Pro',monospace";
     }
     
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
