--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
       <!-- Creation of Top Navigation Bar -->
       <nav>
         <div class="navBar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
+          <li><a id="nav1" href="index.html">Home</a></li>
+          <li><a id="nav2" href="about.html">About</a></li>
+          <li><a id="nav3" href="projects.html">Projects</a></li>
+          <li><a id="nav4" href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
         </div>
       </nav>
       <center> <h1>About Me</h1></center>
@@ -88,8 +88,7 @@
 
     <center>
     <h2 style="">Background</h2>
-    
-    <ul>
+    <ul id="bg_info">
       <li class="bullets">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
       I focused primarily in machine learning and computer vision.</li>
       <br>
@@ -114,6 +113,13 @@
         document.getElementById("proj1").style.font = "20px 'Source Code Pro',monospace";
         document.getElementById("proj2").style.font = "20px 'Source Code Pro',monospace";
         document.getElementById("proj3").style.font = "20px 'Source Code Pro',monospace";
+
+        document.getElementById("bg_info").style.font = "20px 'Source Code Pro',monospace";
+
+        document.getElementById("nav1").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav2").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav3").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav4").style.font = "20px 'Source Code Pro',monospace";
     }
     
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
