--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ index.html is the main homepage of the website
       <!-- Creation of Top Navigation Bar -->
       <nav>
         <div class="navBar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
+          <li><a id="nav1" href="index.html">Home</a></li>
+          <li><a id="nav2" href="about.html">About</a></li>
+          <li><a id="nav3" href="projects.html">Projects</a></li>
+          <li><a id="nav4" href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
         </div>
       </nav>
 
@@ -118,9 +118,10 @@ index.html is the main homepage of the website
   </div>
   <script>
     function change_font_mobile() {
-        document.getElementById("proj1").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("proj2").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("proj3").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav1").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav2").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav3").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav4").style.font = "20px 'Source Code Pro',monospace";
     }
     
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
