--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
       <!-- Creation of Top Navigation Bar -->
       <nav>
         <div class="navBar">
-          <li><a id="nav1" href="index.html">Home</a></li>
-          <li><a id="nav2" href="about.html">About</a></li>
-          <li><a id="nav3" href="projects.html">Projects</a></li>
-          <li><a id="nav4" href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
+          <li><a id="nav5" href="index.html">Home</a></li>
+          <li><a id="nav6" href="about.html">About</a></li>
+          <li><a id="nav7" href="projects.html">Projects</a></li>
+          <li><a id="nav8" href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
         </div>
       </nav>
       <center> <h1>About Me</h1></center>
@@ -88,13 +88,13 @@
 
     <center>
     <h2 style="">Background</h2>
-    <ul id="bg_info">
-      <li class="bullets">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
+    <ul>
+      <li id="bg_info1" class="bullets">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
       I focused primarily in machine learning and computer vision.</li>
       <br>
-      <li class="bullets">I've gained gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
+      <li id="bg_info2" class="bullets">I've gained gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
       <br>
-      <li class="bullets">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
+      <li id="bg_info3" class="bullets">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
       <br>
     </ul> 
     </center>
@@ -114,12 +114,14 @@
         document.getElementById("proj2").style.font = "20px 'Source Code Pro',monospace";
         document.getElementById("proj3").style.font = "20px 'Source Code Pro',monospace";
 
-        document.getElementById("bg_info").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("bg_info1").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("bg_info2").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("bg_info3").style.font = "20px 'Source Code Pro',monospace";
 
-        document.getElementById("nav1").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav2").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav3").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav4").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav5").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav6").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav7").style.font = "20px 'Source Code Pro',monospace";
+        document.getElementById("nav8").style.font = "20px 'Source Code Pro',monospace";
     }
     
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
