--- a/about.html
+++ b/about.html
@@ -80,8 +80,6 @@
         margin-left: 250px;      /*Defines the space between - 70px*/
         margin-right: 250px;
         margin-top: 3px;
-        font-size: 20px;
-        font-family: 'Consolas';
         color: white;
       }
     </style>
@@ -89,12 +87,12 @@
     <center>
     <h2 style="">Background</h2>
     <ul>
-      <li id="bg_info1" class="bullets">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
+      <li id="bg_info1" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
       I focused primarily in machine learning and computer vision.</li>
       <br>
-      <li id="bg_info2" class="bullets">I've gained gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
+      <li id="bg_info2" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I've gained gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
       <br>
-      <li id="bg_info3" class="bullets">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
+      <li id="bg_info3" class="bullets" style="font-size: 20px; font-family: 'Consolas';">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
       <br>
     </ul> 
     </center>
