--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
       <li id="bg_info1" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
       I focused primarily in machine learning and computer vision.</li>
       <br>
-      <li id="bg_info2" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I've gained gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
+      <li id="bg_info2" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I've gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
       <br>
       <li id="bg_info3" class="bullets" style="font-size: 20px; font-family: 'Consolas';">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
       <br>
