--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ index.html is the main homepage of the website
       <center>
         <p style="margin-right:200px">
           <a href = "https://www.github.com/gohurali"><img src="logos/github2.png" style="width:42px;height:42px;"></a> &nbsp
-          <a href = "https://www.linkedin.com/in/gohurali"><img src="logos/linkedin.png" style="width:42px;height:42px;"></a> &nbsp
+          <a href = "https://www.linkedin.com/in/gohurali"><img src="logos/linkedin2.png" style="width:42px;height:42px;"></a> &nbsp
           <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><img src="logos/spotify.png" style="width:42px;height:42px;"></a>
         </p>
       </center>
