Wording changes + Resume updates

--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <html>
+<script src="https://use.fontawesome.com/bacd8c55e7.js"></script>
 <!-- Header Area -->
   <head>
     <title>About Me</title>
@@ -88,20 +89,20 @@
     <h2 style="">Background</h2>
     <ul>
       <li id="bg_info1" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I'm a recent graduate from the University of Washington Bothell with a degree in Computer Science. 
-      I focused primarily in machine learning and computer vision.</li>
+      During my undergraduate studies, I focused primarily in machine learning, natural language processing, and computer vision.</li>
       <br>
-      <li id="bg_info2" class="bullets" style="font-size: 20px; font-family: 'Consolas';">I've gained academic and industry experience ranging from cloud application development, 3D graphics development, machine learning, and computer vision.</li>
+      <li id="bg_info2" class="bullets" style="font-size: 20px; font-family: 'Consolas';">My industry experience revolved around research and creating an automated synthetic image data generator for expanding training data. Additionally training and improving the deep learning model for examining performance.</li>
       <br>
-      <li id="bg_info3" class="bullets" style="font-size: 20px; font-family: 'Consolas';">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine</li>
+      <li id="bg_info3" class="bullets" style="font-size: 20px; font-family: 'Consolas';">Through research, I've been able to also gain experience in natural language processing. I worked with Professors Dr. Arkady Retik & Dr. Diala Ezzeddine.</li>
       <br>
     </ul> 
     </center>
 
     <center>
         <p>
-          <a href = "https://www.github.com/gohurali"><img src="logos/github2.png" style="width:42px;height:42px;"></a> &nbsp
-          <a href = "https://www.linkedin.com/in/gohurali"><img src="logos/linkedin2.png" style="width:42px;height:42px;"></a> &nbsp
-          <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><img src="logos/spotify.png" style="width:42px;height:42px;"></a>
+          <a href = "https://www.github.com/gohurali"><i class="fa fa-github" aria-hidden="true" style="font-size:49px;color: white;"></i></a> &nbsp <!--<img src="logos/github2.png" style="width:42px;height:42px;">-->
+          <a href = "https://www.linkedin.com/in/gohurali"><i class="fa fa-linkedin" style="font-size:49px; color:#0E76A8"></i></a> &nbsp <!--<img src="logos/linkedin2.png" style="width:42px;height:42px;">-->
+          <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><i class="fa fa-spotify" style="font-size:49px; color:#1DB954"></i></a> <!--<img src="logos/spotify.png" style="width:42px;height:42px;">-->
         </p>
       </center>
     
