--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Gohur Ali's GitHub Page is Currently Under Heavy Construction!
 index.html is the main homepage of the website
 -->
 <html>
+  <script src="https://use.fontawesome.com/bacd8c55e7.js"></script>
   <!-- Header Area -->
   <head>
     <title>Gohur Ali</title>
@@ -107,9 +108,9 @@ index.html is the main homepage of the website
 
       <center>
         <p style="margin-right:200px">
-          <a href = "https://www.github.com/gohurali"><img src="logos/github2.png" style="width:42px;height:42px;"></a> &nbsp
-          <a href = "https://www.linkedin.com/in/gohurali"><img src="logos/linkedin2.png" style="width:42px;height:42px;"></a> &nbsp
-          <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><img src="logos/spotify.png" style="width:42px;height:42px;"></a>
+          <a href = "https://www.github.com/gohurali"><i class="fa fa-github" aria-hidden="true" style="font-size:49px;color: white;"></i></a> &nbsp <!--<img src="logos/github2.png" style="width:42px;height:42px;">-->
+          <a href = "https://www.linkedin.com/in/gohurali"><i class="fa fa-linkedin" style="font-size:49px; color:#0E76A8"></i></a> &nbsp <!--<img src="logos/linkedin2.png" style="width:42px;height:42px;">-->
+          <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><i class="fa fa-spotify" style="font-size:49px; color:#1DB954"></i></a> <!--<img src="logos/spotify.png" style="width:42px;height:42px;">-->
         </p>
       </center>
 
