--- a/index.html
+++ b/index.html
@@ -1,132 +1,20 @@
-<!DOCTYPE html>
-<!--
-Gohur Ali's GitHub Page is Currently Under Heavy Construction!
-index.html is the main homepage of the website
--->
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>PortfolioGohurali</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <!-- Getting Fonts from Google Fonts API -->
+  <style type="text/css">@font-face{font-family:'Dosis';font-style:normal;font-weight:800;src:url(https://fonts.gstatic.com/s/dosis/v19/HhyJU5sn9vOmLxNkIwRSjTVNWLEJt7Ql1BMCbKsUPqjmG8Q.woff) format('woff');unicode-range:U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;}@font-face{font-family:'Dosis';font-style:normal;font-weight:800;src:url(https://fonts.gstatic.com/s/dosis/v19/HhyJU5sn9vOmLxNkIwRSjTVNWLEJt7Ql1RMCbKsUPqjmG8Q.woff) format('woff');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Dosis';font-style:normal;font-weight:800;src:url(https://fonts.gstatic.com/s/dosis/v19/HhyJU5sn9vOmLxNkIwRSjTVNWLEJt7Ql2xMCbKsUPqjm.woff) format('woff');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
+  <style type="text/css">@font-face{font-family:'Karla';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/karla/v15/qkBIXvYC6trAT55ZBi1ueQVIjQTD-JqaHUlMZbLXGhmRytc.woff) format('woff');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Karla';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/karla/v15/qkBIXvYC6trAT55ZBi1ueQVIjQTD-JqaE0lMZbLXGhmR.woff) format('woff');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
+  <style type="text/css">@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDvucq7Gq0DDzS.woff2) format('woff2');unicode-range:U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;}@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDt-cq7Gq0DDzS.woff2) format('woff2');unicode-range:U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDsOcq7Gq0DDzS.woff2) format('woff2');unicode-range:U+0370-03FF;}@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDvOcq7Gq0DDzS.woff2) format('woff2');unicode-range:U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;}@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDvecq7Gq0DDzS.woff2) format('woff2');unicode-range:U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Source Code Pro';font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/sourcecodepro/v14/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDs-cq7Gq0DA.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
+
   <script src="https://use.fontawesome.com/bacd8c55e7.js"></script>
-  <!-- Header Area -->
-  <head>
-    <title>Gohur Ali</title>
-    <!-- Getting Fonts from Google Fonts API -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:800">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet"> 
-    <!-- ===============================CSS========================== -->
-    <style>
-      body{
-        background-color: #252730;
-      }
-      /*Title Header*/
-      h1 {
-        font-family: 'Source Code Pro', monospace;
-        font-size: 500%;
-        color: white;
-      }
-
-      h2 {
-        font-family: 'Karla';
-        font-size: 290%;
-        color: white;
-      }
-
-      h3 {
-        font-family: 'Karla';
-        font-size: 200%;
-        color: white;
-      }
-      img{
-        /*Crops the image into a circle*/
-        border-radius: 50%;
-        width: 500px;
-      }
-      li{
-        font-family: "Karla";
-        color: white;
-      }
-    </style>
-    <!-- ===============================CSS========================== -->
-    <!-- Linking External CSS File for Navigation Bar -->
-    <link href="nav.css" rel="stylesheet" type="text/css">
-
-    <style>
-    /*Attributes for the Line Objects*/
-    li{
-      display: inline-block;  /*Makes the list horizontal*/
-      margin-left: 10px;      /*Defines the space between - 70px*/
-      margin-right: 10px;
-      margin-top: 30px;
-    }
-    </style>
-
-
-      <!-- Creation of Top Navigation Bar -->
-      <nav>
-        <div class="navBar">
-          <li><a id="nav1" href="index.html">Home</a></li>
-          <li><a id="nav2" href="about.html">About</a></li>
-          <li><a id="nav3" href="projects.html">Projects</a></li>
-          <li><a id="nav4" href="Resume/AliGohur_Latest_Resume.pdf">Resume</a></li>
-        </div>
-      </nav>
-
-      <center>
-        <h1 style="margin-top:1px;">gohur ali</h1> 
-      </center>
-  </head>
-
-<!-- Body Area -->
-<div class="main">
-  <script type="text/javascript" src="js_scripts/nodes.js"></script>
-  <script type="text/javascript">
-      var nodesjs = new NodesJs({
-          id: 'nodes',
-          width: window.innerWidth,
-          height: window.innerHeight,
-          particleSize: 2,
-          lineSize: 1,
-          particleColor: [255, 255, 255, 0.3],
-          lineColor: [255, 255, 255],
-          backgroundFrom: [10, 25, 100],
-          backgroundTo: [25, 50, 150],
-          backgroundDuration: 4000,
-          nobg: true,
-          number: window.hasOwnProperty('orientation') ? 30: 100,
-          speed: 20
-      });
-  </script>
-  <div style="z-index: -1; position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
-        <canvas id="nodes"></canvas>
-  </div>
-  
-  <div class="textArea">
-    <body  style="z-index: 100; position: static">
-      <!-- Photo -->
-      <center>
-      <img src="Photos/grad.jpg" alt="grad speech photo" style="margin-right:200px">
-      </center>
-
-      <center>
-        <p style="margin-right:200px">
-          <a href = "https://www.github.com/gohurali"><i class="fa fa-github" aria-hidden="true" style="font-size:49px;color: white;"></i></a> &nbsp <!--<img src="logos/github2.png" style="width:42px;height:42px;">-->
-          <a href = "https://www.linkedin.com/in/gohurali"><i class="fa fa-linkedin" style="font-size:49px; color:#0E76A8"></i></a> &nbsp <!--<img src="logos/linkedin2.png" style="width:42px;height:42px;">-->
-          <a href = "https://open.spotify.com/user/gohurali?si=04GxWVRTSnKCqItarp-pjQ"><i class="fa fa-spotify" style="font-size:49px; color:#1DB954"></i></a> <!--<img src="logos/spotify.png" style="width:42px;height:42px;">-->
-        </p>
-      </center>
-
-    </body>
-  </div>
-  </div>
-  <script>
-    function change_font_mobile() {
-        document.getElementById("nav1").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav2").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav3").style.font = "20px 'Source Code Pro',monospace";
-        document.getElementById("nav4").style.font = "20px 'Source Code Pro',monospace";
-    }
-    
-    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-      change_font_mobile();
-    }
-  </script>
+<link rel="stylesheet" href="styles.2d0a5f96f6391be55c80.css"></head>
+<body>
+  <app-root></app-root>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer=""></script><script src="polyfills.94daefd414b8355106ab.js" defer=""></script><script src="main.b6a11798c863b8ea50ef.js" defer=""></script></body>
 </html>
